Fixed error on Logger use