@@ -2,6 +2,7 @@ package dev.lightdream.filemanager;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import dev.lightdream.logger.Debugger;
 import dev.lightdream.logger.Logger;
 import lombok.SneakyThrows;
 
@@ -84,10 +85,10 @@ public class FileManager {
             return gson.fromJson(json.toString(), clazz);
         } catch (Exception e) {
             Logger.warn("Could not load " + clazz.getSimpleName() + ". Creating and saving new instance.");
-            if (Logger.main.debugToConsole()) {
+            if (Debugger.isEnabled()) {
                 e.printStackTrace();
             }
-            T obj = clazz.newInstance();
+            T obj = clazz.getDeclaredConstructor().newInstance();
             save(obj);
             return obj;
         }
